--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,165 @@
 config.py
 
 *.pyc
+static/images/1.png
+static/images/10.png
+static/images/100.png
+static/images/101.png
+static/images/102.png
+static/images/103.png
+static/images/104.png
+static/images/105.png
+static/images/106.png
+static/images/107.png
+static/images/108.png
+static/images/109.png
+static/images/11.png
+static/images/110.png
+static/images/111.png
+static/images/112.png
+static/images/113.png
+static/images/114.png
+static/images/115.png
+static/images/116.png
+static/images/117.png
+static/images/118.png
+static/images/119.png
+static/images/12.png
+static/images/120.png
+static/images/121.png
+static/images/122.png
+static/images/123.png
+static/images/124.png
+static/images/125.png
+static/images/126.png
+static/images/127.png
+static/images/128.png
+static/images/129.png
+static/images/13.png
+static/images/130.png
+static/images/131.png
+static/images/132.png
+static/images/133.png
+static/images/134.png
+static/images/135.png
+static/images/136.png
+static/images/137.png
+static/images/138.png
+static/images/139.png
+static/images/14.png
+static/images/140.png
+static/images/141.png
+static/images/142.png
+static/images/143.png
+static/images/144.png
+static/images/145.png
+static/images/146.png
+static/images/147.png
+static/images/148.png
+static/images/149.png
+static/images/15.png
+static/images/150.png
+static/images/151.png
+static/images/152.png
+static/images/153.png
+static/images/154.png
+static/images/155.png
+static/images/156.png
+static/images/157.png
+static/images/158.png
+static/images/159.png
+static/images/16.png
+static/images/160.png
+static/images/161.png
+static/images/162.png
+static/images/17.png
+static/images/18.png
+static/images/19.png
+static/images/2.png
+static/images/20.png
+static/images/21.png
+static/images/22.png
+static/images/23.png
+static/images/24.png
+static/images/25.png
+static/images/26.png
+static/images/27.png
+static/images/28.png
+static/images/29.png
+static/images/3.png
+static/images/30.png
+static/images/31.png
+static/images/32.png
+static/images/33.png
+static/images/34.png
+static/images/35.png
+static/images/36.png
+static/images/37.png
+static/images/38.png
+static/images/39.png
+static/images/4.png
+static/images/40.png
+static/images/41.png
+static/images/42.png
+static/images/43.png
+static/images/44.png
+static/images/45.png
+static/images/46.png
+static/images/47.png
+static/images/48.png
+static/images/49.png
+static/images/5.png
+static/images/50.png
+static/images/51.png
+static/images/52.png
+static/images/53.png
+static/images/54.png
+static/images/55.png
+static/images/56.png
+static/images/57.png
+static/images/58.png
+static/images/59.png
+static/images/6.png
+static/images/60.png
+static/images/61.png
+static/images/62.png
+static/images/63.png
+static/images/64.png
+static/images/65.png
+static/images/66.png
+static/images/67.png
+static/images/68.png
+static/images/69.png
+static/images/7.png
+static/images/70.png
+static/images/71.png
+static/images/72.png
+static/images/73.png
+static/images/74.png
+static/images/75.png
+static/images/76.png
+static/images/77.png
+static/images/78.png
+static/images/79.png
+static/images/8.png
+static/images/80.png
+static/images/81.png
+static/images/82.png
+static/images/83.png
+static/images/84.png
+static/images/85.png
+static/images/86.png
+static/images/87.png
+static/images/88.png
+static/images/89.png
+static/images/9.png
+static/images/90.png
+static/images/91.png
+static/images/92.png
+static/images/93.png
+static/images/94.png
+static/images/95.png
+static/images/96.png
+static/images/97.png
+static/images/98.png
+static/images/99.png
